--- a/react/src/Components/AnimePage/Player.module.scss
+++ b/react/src/Components/AnimePage/Player.module.scss
@@ -140,7 +140,7 @@
 
     &  > .hint {
       opacity: 0;
-      transition: opacity 500ms ease 0ms;
+      transition: opacity 125ms ease 0ms;
       font-size: 0.75rem;
       padding: 1rem;
       color: var(--primary-a50);
@@ -155,6 +155,7 @@
 @media (min-width: 480px) {
   :is(.rightSection, .leftSection):is(:hover, :focus-visible) > .wrapper > .hint {
     opacity: 1;
+    transition-duration: 250ms;
     transition-delay: 1000ms;
   }
 }
